--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
                     <span>Bulbasaur</span>
                     <span>#001</span>
                 </div>
-                <img src="src/imagens/bulbasaur.gif" alt="bulbasaur" class="gif">
-                <ul class="tipos">
 
+                <img src="./src/imagens/bulbasaur.gif" alt="Bulbasaur" class="gif" />
+
+                <ul class="tipos">
                     <li class="tipo grama">Grama</li>
                     <li class="tipo veneno">Veneno</li>
-
                 </ul>
-                <p class="descricao" style="font-family: Poppins">Há uma semente de planta em suas costas desde o dia
-                    que este Pokémon nasce.
-                    A semente cresce lentamente.
-                </p>
+
+                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pókemon nasce. A semente cresce lentamente.</p>
             </li>
 
             <li class="cartao-pokemon">
@@ -49,15 +47,15 @@
                     <span>Ivysaur</span>
                     <span>#002</span>
                 </div>
-                <img src="./src/imagens/ivysaur.gif" alt="Ivybasaur" class="gif">
-                <ul class="tipos">
 
+                <img src="./src/imagens/ivysaur.gif" alt="Ivysaur" class="gif" />
+
+                <ul class="tipos">
                     <li class="tipo grama">Grama</li>
                     <li class="tipo veneno">Veneno</li>
-
                 </ul>
-                <p class="descricao">Quando o bulbo em suas costas cresce, parece perder a capacidade de ficar em pé em
-                    suas patas traseisaras.
+
+                <p class="descricao">Quando o bulbo em suas costas cresce, parece perder a capacidade de ficar de pé em suas patas traseiras.</p>
             </li>
 
             <li class="cartao-pokemon">
@@ -65,16 +63,15 @@
                     <span>Venusaur</span>
                     <span>#003</span>
                 </div>
-                <img src="src/imagens/venusaur.gif" alt="Venusaur" class="gif">
-                <ul class="tipos">
 
+                <img src="./src/imagens/venusaur.gif" alt="Venusaur" class="gif" />
+
+                <ul class="tipos">
                     <li class="tipo grama">Grama</li>
                     <li class="tipo veneno">Veneno</li>
-
                 </ul>
-                <p class="descricao">Sua planta floresce quando está absorvendo energia solar. Ele permanece em
-                    movimento para buscar a luz solar.
-                </p>
+
+                <p class="descricao">Sua planta floresce quando está absorvendo energia solar. Ele permanece em movimento para buscar a luz solar.</p>
             </li>
 
             <li class="cartao-pokemon">
@@ -82,15 +79,14 @@
                     <span>Charmander</span>
                     <span>#004</span>
                 </div>
-                <img src="src/imagens/charmander.gif" alt="Charmander" class="gif">
+
+                <img src="./src/imagens/charmander.gif" alt="Charmander" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo fogo">Fogo</li>
-
                 </ul>
-                <p class="descricao">Tem preferencia em coisas quentes. Quando chove, diz-se que o vapor jorra da ponta
-                    da sua cada
-                </p>
+
+                <p class="descricao">Tem preferência por coisas quentes. Quando chove, diz-se que o vapor jorra da ponta de sua cauda.</p>
             </li>
 
             <li class="cartao-pokemon">
@@ -98,15 +94,14 @@
                     <span>Charmeleon</span>
                     <span>#005</span>
                 </div>
-                <img src="src/imagens/charmeleon.gif" alt="Charmeleon" class="gif">
+
+                <img src="./src/imagens/charmeleon.gif" alt="Charmeleon" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo fogo">Fogo</li>
-
                 </ul>
-                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pokémon nasce.
-                    A semente cresce lentamente
-                </p>
+
+                <p class="descricao">Tem uma natureza bárbara. Na batalha, ele chicoteia sua cauda ardente e corta com garras afiadas.</p>
             </li>
 
             <li class="cartao-pokemon">
@@ -114,15 +109,14 @@
                     <span>Charizard</span>
                     <span>#006</span>
                 </div>
-                <img src="src/imagens/charizard.gif" alt="Charizard" class="gif">
+
+                <img src="./src/imagens/charizard.gif" alt="Charizard" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo fogo">Fogo</li>
-
                 </ul>
-                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pokémon nasce.
-                    A semente cresce lentamente
-                </p>
+
+                <p class="descricao">Ele cospe fogo que é quente o suficiente para derreter pedregulhos. Pode causar incêndios florestais soprando chamas.</p>
             </li>
 
             <li class="cartao-pokemon">
@@ -130,66 +124,59 @@
                     <span>Squirtle</span>
                     <span>#007</span>
                 </div>
-                <img src="src/imagens/squirtle.gif" alt="squirtle" class="gif">
+
+                <img src="./src/imagens/squirtle.gif" alt="Squirtle" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo agua">Água</li>
-
                 </ul>
-                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pokémon nasce.
-                    A semente cresce lentamente
-                </p>
-            </li>
 
+                <p class="descricao">Quando ele retrai seu longo pescoço em sua concha, ele esguicha água com força vigorosa.</p>
+            </li>
 
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Wartortle</span>
                     <span>#008</span>
                 </div>
-                <img src="src/imagens/wartortle.gif" alt="wartortle" class="gif">
+
+                <img src="./src/imagens/wartortle.gif" alt="Wartortle" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo agua">Água</li>
-
                 </ul>
-                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pokémon nasce.
-                    A semente cresce lentamente
-                </p>
-            </li>
 
+                <p class="descricao">É reconhecido como um símbolo de longevidade. Se sua concha tem algas, esse Wartortle é muito antigo.</p>
+            </li>
 
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Blastoise</span>
                     <span>#009</span>
                 </div>
-                <img src="src/imagens/blastoise.gif" alt="Blastoise" class="gif">
+
+                <img src="./src/imagens/blastoise.gif" alt="Blastoise" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo agua">Água</li>
-
                 </ul>
-                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pokémon nasce.
-                    A semente cresce lentamente
-                </p>
-            </li>
 
+                <p class="descricao">Ele esmaga seu inimigo sob seu corpo pesado para causar desmaios. Em uma pitada, ele se retirará dentro de sua concha.</p>
+            </li>
 
             <li class="cartao-pokemon">
                 <div class="informacoes">
                     <span>Caterpie</span>
                     <span>#010</span>
                 </div>
-                <img src="src/imagens/caterpie.gif" alt="caterpie" class="gif">
+
+                <img src="./src/imagens/caterpie.gif" alt="Caterpie" class="gif" />
+
                 <ul class="tipos">
-
                     <li class="tipo inseto">Inseto</li>
-
                 </ul>
-                <p class="descricao">Há uma semente de planta em suas costas desde o dia que este Pokémon nasce.
-                    A semente cresce lentamente
-                </p>
+
+                <p class="descricao">Para proteção, ele libera um fedor horrível da antena em sua cabeça para afastar os inimigos.</p>
             </li>
         </ul>
     </main>
